added new flex themed site

--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,21 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+name: fishstiqz
+title: fishstiqz 
+email: fish@analog.org
+tagline: fishstiqz's blog
+description: fishstiqz blog computer security 
 
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+twitter_username: fishstiqz 
+github_username:  fishstiqz 
+logo_url: "https://avatars3.githubusercontent.com/u/7143342?s=100"
+gpg_fingerprint1: "740F AF32 222C 1863 BDBB"
+gpg_fingerprint2: "5EDF 834C CB99 BE29 A971"
+gpg_keyfile: "fishstiqz.asc"
+
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://fishstiqz.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
-theme: minima
 gems:
   - jekyll-feed
 exclude:
